[gd_scene load_steps=14 format=3 uid="uid://bd82t1jifeknf"]

[ext_resource type="Script" path="res://Scripts/Triple_Hit_Enemy.gd" id="1_ja43w"]
[ext_resource type="Texture2D" uid="uid://bcglwr1pgqcao" path="res://Resources/Sprites/yellow-circle-with-eyes.png" id="2_gixst"]
[ext_resource type="Script" path="res://Scripts/EnemyDetection.gd" id="3_wb1d4"]
[ext_resource type="Texture2D" uid="uid://byk277wk4ea8" path="res://Resources/Sprites/yellow-sword.png" id="4_lct1j"]
[ext_resource type="Animation" uid="uid://cm4xdks3fmnwo" path="res://triple_hit_enemy_swipe.res" id="5_im1bs"]
[ext_resource type="AudioStream" uid="uid://ddodhwpivbtkv" path="res://Resources/Sounds/enemy_attack.wav" id="5_u1md7"]
[ext_resource type="AudioStream" uid="uid://bdifynsque42q" path="res://Resources/Sounds/enemyDeath.wav" id="6_20dno"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gu3l8"]
radius = 57.85

[sub_resource type="CircleShape2D" id="CircleShape2D_fa4uc"]
radius = 446.45

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_avm3e"]
radius = 11.0
height = 216.0

[sub_resource type="Animation" id="Animation_j5csh"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 1.7),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11n7b"]
_data = {
"death": SubResource("Animation_j5csh"),
"swipe": ExtResource("5_im1bs")
}

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ie0wx"]
vertices = PackedVector2Array(1138.03, 635, 9.03125, 635, 10.9609, 14.9766, 1139.96, 13.0078)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1, 5, 1150, 3, 1139, 639, 5, 639)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="DebugEnemy" type="CharacterBody2D"]
position = Vector2(310, 312)
script = ExtResource("1_ja43w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_gu3l8")
debug_color = Color(0.972549, 0, 0.431373, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.57079
scale = Vector2(0.1825, 0.1825)
texture = ExtResource("2_gixst")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-248, -284)
script = ExtResource("3_wb1d4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(248, 284)
shape = SubResource("CircleShape2D_fa4uc")

[node name="Timer" type="Timer" parent="."]

[node name="AttackHitbox" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
z_index = 1
position = Vector2(0, -107)
shape = SubResource("CapsuleShape2D_avm3e")

[node name="Sprite2D" type="Sprite2D" parent="AttackHitbox"]
position = Vector2(-0.000385284, -106)
rotation = -1.57079
scale = Vector2(0.458059, 0.480997)
texture = ExtResource("4_lct1j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_11n7b")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Audio" type="Node2D" parent="."]

[node name="Swing" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(548, 7)
stream = ExtResource("5_u1md7")

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(548, 7)
stream = ExtResource("6_20dno")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-655, -458)
scale = Vector2(1.16818, 1.42015)
navigation_polygon = SubResource("NavigationPolygon_ie0wx")

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="player_detected" from="DetectionArea" to="." method="_on_player_detected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
